# agent-hackathon-dinefilter

./: .dockerignore  .gitignore  README.md  pyproject.toml
.actor/: Dockerfile  actor.json
presentation/: ~$DineFilter.pptx
src/: __main__.py
